--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 
 .swiper-slide {
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100%;
@@ -26,9 +26,39 @@
   color: transparent;
 }
 
+.styled-swal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1050;
+  background-color: rgb(1, 0, 70);
+  padding: 20px;
+  color: white;
+  border: 5px solid #f56262;
+  border-radius: 10px;
+  min-height: 10rem;
+}
+
+.styled-swal {
+  position: fixed;
+  display: flex; 
+  padding-left: 5rem;
+}
+
+.styled-icon {
+  position: fixed;
+  margin-left: 35px;
+  top: 0;
+  font-size: 15px; 
+}
+
+.styled-title {
+  text-align: center;
+}
+
 @keyframes blink {
   50% {
-      background: transparent;
-      color: black;
+    background: transparent;
+    color: black;
   }
 }
